--- a/.github/workflows/trigger.yml
+++ b/.github/workflows/trigger.yml
@@ -17,9 +17,9 @@ jobs:
         uses: actions/checkout@v3
       - name: Update formula
         run: |
-          file = Formula/${{github.event.client_payload.formula}}.rb
+          file = Formula/${{github.event.inputs.formula}}.rb
           echo "file = $file"
-          ver = ${{github.event.client_payload.version}}
+          ver = ${{github.event.inputs.version}}
           url = $(grep url $file | head -1 | sed -e 's/url\|[ "]//g' | sed -e 's/[0-9]\+.[0-9]\+.[0-9]\+/'$ver'/g')
           echo "new url = $url"
           sha = $(curl -L $url | sha256sum -b | awk '{print $1}')
