--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -30,12 +30,13 @@ jobs:
         git clone -b 4.8.0 https://github.com/opencv/opencv.git
         git clone -b v1.5.2 https://github.com/na-trium-144/webcface.git
         git clone -b v1.3.0 https://github.com/na-trium-144/webcface-tools.git
-        cmake -Bbuild_opencv -DCMAKE_BUILD_TYPE=Release "-DCMAKE_INSTALL_PREFIX=$APP_NAME/Contents" opencv
+        cmake -Bbuild_opencv -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=$(pwd)/install opencv
         cmake --build build_opencv -t install
-        cmake -Bbuild_webcface -DCMAKE_BUILD_TYPE=Release "-DCMAKE_PREFIX_PATH=$APP_NAME/Contents" "-DCMAKE_INSTALL_PREFIX=$APP_NAME/Contents" webcface
+        cmake -Bbuild_webcface -DCMAKE_BUILD_TYPE=Release -DCMAKE_PREFIX_PATH=$(pwd)/install -DCMAKE_INSTALL_PREFIX=$(pwd)/install webcface
         cmake --build build_webcface -t install
-        cmake -Bbuild_tools -DCMAKE_BUILD_TYPE=Release "-DCMAKE_PREFIX_PATH=$APP_NAME/Contents" "-DCMAKE_INSTALL_PREFIX=$APP_NAME/Contents" webcface-tools
+        cmake -Bbuild_tools -DCMAKE_BUILD_TYPE=Release -DCMAKE_PREFIX_PATH=$(pwd)/install -DCMAKE_INSTALL_PREFIX=$(pwd)/install webcface-tools
         cmake --build build_tools -t install
+        mv install/bin install/lib "$APP_NAME/Contents/"
     - run: zip -r "${APP_NAME}.zip" "$APP_NAME"
     - name: Create Tag
       run: |
@@ -43,7 +44,7 @@ jobs:
     - uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        tags: true
+        branch: v${{env.TAG}}
     - name: Release
       uses: docker://antonyurchenko/git-release:v5
       env:
