--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -16,7 +16,7 @@ jobs:
       working-directory: webcface-webui/electron/main
       run: |
         sed '2i\
-        process.env.PATH = app.getPath("exe") + "/../bin:" + process.env.PATH;
+        process.env.PATH = app.getPath("exe").split("/").slice(0, -1).join("/") + "/../bin:" + process.env.PATH;
         ' index.ts > new_index.ts
         mv new_index.ts index.ts
     - run: npm install --prefer-offline --no-audit --maxsockets 1
