--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -1,9 +1,22 @@
 name: Build WebUI-Server
 on:
-  push:
+  workflow_dispatch:
+    inputs:
+      version:
+        description: "version"
+        required: true
+      webcface:
+        description: "webcface version"
+        required: true
+      tools:
+        description: "tools version"
+        required: true
+      webui:
+        description: "webui version"
+        required: true
 env:
   APP_NAME: "WebCFace WebUI Server.app"
-  TAG: "v1.5.2" # todo: あとでかえる
+  OPENCV_VER: "4.8.0"
 jobs:
   build:
     runs-on: macos-13
@@ -11,7 +24,7 @@ jobs:
     - uses: actions/setup-node@v4
       with:
         node-version: 18
-    - run: git clone https://github.com/na-trium-144/webcface-webui.git
+    - run: git clone -b v${{github.event.inputs.webui}} https://github.com/na-trium-144/webcface-webui.git
     - name: Patch source code
       working-directory: webcface-webui/electron/main
       run: |
@@ -26,9 +39,9 @@ jobs:
     - run: mv webcface-webui/release/mac/*.app "$APP_NAME"
     - name: Install webcface
       run: |
-        git clone -b 4.8.0 https://github.com/opencv/opencv.git
-        git clone -b v1.5.2 https://github.com/na-trium-144/webcface.git
-        git clone -b v1.3.0 https://github.com/na-trium-144/webcface-tools.git
+        git clone -b ${{env.OPENCV_VER}} https://github.com/opencv/opencv.git
+        git clone -b v${{github.event.inputs.webcface}} https://github.com/na-trium-144/webcface.git
+        git clone -b v${{github.event.inputs.tools}} https://github.com/na-trium-144/webcface-tools.git
         cmake -Bbuild_opencv -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=$(pwd)/install \
           -DOPENCV_FORCE_3RDPARTY_BUILD=ON \
           -DWITH_TIFF=OFF -DWITH_OPENEXR=OFF -DWITH_PROTOBUF=OFF -DWITH_IMGCODEC_HDR=OFF \
@@ -41,7 +54,7 @@ jobs:
         cmake --build build_webcface -t install
         cmake -Bbuild_tools -DCMAKE_BUILD_TYPE=Release -DCMAKE_PREFIX_PATH=$(pwd)/install -DCMAKE_INSTALL_PREFIX=$(pwd)/install webcface-tools
         cmake --build build_tools -t install
-        mv install/bin install/lib install/share "$APP_NAME/Contents/"
+        mv install/* "$APP_NAME/Contents/"
     - run: zip -r "${APP_NAME}.zip" "$APP_NAME"
     - uses: actions/upload-artifact@v3
       with:
@@ -59,12 +72,11 @@ jobs:
     - name: Create Tag
       uses: EndBug/latest-tag@latest
       with:
-        ref: ${{env.TAG}}
+        ref: v${{github.event.inputs.version}}
     - name: Release
       uses: ncipollo/release-action@v1
       with:
         artifacts: "*.zip"
         makeLatest: true
-        tag: ${{env.TAG}}
-
-
+        tag: v${{github.event.inputs.version}}
+        body: "webcface ${{github.event.inputs.webcface}}, webui ${{github.event.inputs.webui}}, tools ${{github.event.inputs.tools}}, opencv ${{env.OPENCV_VER}}"
