--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -42,3 +42,12 @@ jobs:
         with:
           name: bottles
           path: '*.bottle.*'
+
+  cask:
+    runs-on: macos-13
+    steps:
+      - name: Set up Homebrew
+        id: set-up-homebrew
+        uses: Homebrew/actions/setup-homebrew@master
+      - run: brew install webcface-webui-server
+
