--- a/.github/workflows/trigger.yml
+++ b/.github/workflows/trigger.yml
@@ -37,13 +37,13 @@ jobs:
       - name: Update ftxui
         run: |
           git clone https://github.com/ArthurSonzogni/FTXUI.git
-          ver="$(git -C FTXUI describe --tags)"
+          ver="$(git -C FTXUI describe --tags | sed 's/^v//')"
           hash="$(git -C FTXUI rev-parse HEAD)"
           rm -rf FTXUI
           ver_short="$(echo $ver | sed -e 's/-\(.*\)-g.*/.\1/')"
           sed -i 's/revision: ".*"/revision: "'"$hash"'"/' Formula/ftxui.rb
-          sed -i 's/version: ".*"/version: "'"$ver"'"/' Formula/ftxui.rb
-          sed -i 's/ VERSION .*)/ VERSION '$ver_short')/' Formula/ftxui.rb
+          sed -i 's/version ".*"/version "'"$ver"'"/' Formula/ftxui.rb
+          sed -i 's/ PROPERTIES VERSION .*)/ PROPERTIES VERSION '"$ver_short"')/' Formula/ftxui.rb
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v6
         with:
