--- a/.github/workflows/trigger.yml
+++ b/.github/workflows/trigger.yml
@@ -40,7 +40,7 @@ jobs:
           ver="$(git -C FTXUI describe --tags | sed 's/^v//')"
           hash="$(git -C FTXUI rev-parse HEAD)"
           rm -rf FTXUI
-          ver_short="$(echo $ver | sed -e 's/-\(.*\)-g.*/.\1/')"
+          ver_short="$(echo "$ver" | $(which sed) -e 's/-\(.*\)-g.*/.\1/')"
           sed -i 's/revision: ".*"/revision: "'"$hash"'"/' Formula/ftxui.rb
           sed -i 's/version ".*"/version "'"$ver"'"/' Formula/ftxui.rb
           sed -i 's/ PROPERTIES VERSION .*)/ PROPERTIES VERSION '"$ver_short"')/' Formula/ftxui.rb
