--- a/.github/workflows/trigger.yml
+++ b/.github/workflows/trigger.yml
@@ -26,16 +26,16 @@ jobs:
           echo "sha256 = $sha"
           echo -e "$(head -3 "$file")\n  url \"$url\"\n  sha256 \"$sha\"\n$(tail +6 "$file")" > "$file"
         shell: bash
-      - name: Update imagemagick
-        run: |
-          curl -fL -o Formula/imagemagick-no-openmp-new.rb https://raw.githubusercontent.com/Homebrew/homebrew-core/refs/heads/master/Formula/i/imagemagick.rb
-          patch Formula/imagemagick-no-openmp-new.rb ./imagemagick-no-openmp.patch
-          if diff <(head -n 10 Formula/imagemagick-no-openmp.rb) <(head -n 10 Formula/imagemagick-no-openmp-new.rb); then
-            echo "No version change in imagemagick"
-            rm Formula/imagemagick-no-openmp-new.rb
-          else
-            mv Formula/imagemagick-no-openmp-new.rb Formula/imagemagick-no-openmp.rb
-          fi
+      # - name: Update imagemagick
+      #   run: |
+      #     curl -fL -o Formula/imagemagick-no-openmp-new.rb https://raw.githubusercontent.com/Homebrew/homebrew-core/refs/heads/master/Formula/i/imagemagick.rb
+      #     patch Formula/imagemagick-no-openmp-new.rb ./imagemagick-no-openmp.patch
+      #     if diff <(head -n 10 Formula/imagemagick-no-openmp.rb) <(head -n 10 Formula/imagemagick-no-openmp-new.rb); then
+      #       echo "No version change in imagemagick"
+      #       rm Formula/imagemagick-no-openmp-new.rb
+      #     else
+      #       mv Formula/imagemagick-no-openmp-new.rb Formula/imagemagick-no-openmp.rb
+      #     fi
       - name: Update vips
         run: |
           curl -fL -o Formula/vips-lite-new.rb https://raw.githubusercontent.com/Homebrew/homebrew-core/refs/heads/master/Formula/v/vips.rb
@@ -46,16 +46,16 @@ jobs:
           else
             mv Formula/vips-lite-new.rb Formula/vips-lite.rb
           fi
-      - name: Update ftxui
-        run: |
-          git clone https://github.com/ArthurSonzogni/FTXUI.git
-          ver="$(git -C FTXUI describe --tags | sed 's/^v//')"
-          hash="$(git -C FTXUI rev-parse HEAD)"
-          rm -rf FTXUI
-          ver_short="$(echo "$ver" | $(which sed) -e 's/-\(.*\)-g.*/.\1/')"
-          sed -i 's/revision: ".*"/revision: "'"$hash"'"/' Formula/ftxui.rb
-          sed -i 's/version ".*"/version "'"$ver"'"/' Formula/ftxui.rb
-          sed -i 's/ PROPERTIES VERSION .*)/ PROPERTIES VERSION '"$ver_short"')/' Formula/ftxui.rb
+      # - name: Update ftxui
+      #   run: |
+      #     git clone https://github.com/ArthurSonzogni/FTXUI.git
+      #     ver="$(git -C FTXUI describe --tags | sed 's/^v//')"
+      #     hash="$(git -C FTXUI rev-parse HEAD)"
+      #     rm -rf FTXUI
+      #     ver_short="$(echo "$ver" | $(which sed) -e 's/-\(.*\)-g.*/.\1/')"
+      #     sed -i 's/revision: ".*"/revision: "'"$hash"'"/' Formula/ftxui.rb
+      #     sed -i 's/version ".*"/version "'"$ver"'"/' Formula/ftxui.rb
+      #     sed -i 's/ PROPERTIES VERSION .*)/ PROPERTIES VERSION '"$ver_short"')/' Formula/ftxui.rb
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v6
         with:
